--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="se.trixon.confqual"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="@string/app_version" >
 
     <uses-sdk
-        android:minSdkVersion="14"
+        android:minSdkVersion="4"
         android:targetSdkVersion="15" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.Sherlock.Light" >
         <activity
             android:name=".QualifierListActivity"
             android:label="@string/title_qualifier_list" >
