--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Sherlock.Light" >
         <activity
             android:name=".QualifierListActivity"
-            android:label="@string/title_qualifier_list" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +23,7 @@
         </activity>
         <activity
             android:name=".QualifierDetailActivity"
-            android:label="@string/title_qualifier_detail" >
+            android:label="@string/app_name" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".QualifierListActivity" />
